[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/components/background/background.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/fonts/JetBrainsMono/JetBrainsMonoNerdFontCompleteM-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/fonts/FredokaOne/FredokaOne-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/images/logo_momory_game.png" type="Texture" id=4]
[ext_resource path="res://home/home.gd" type="Script" id=5]
[ext_resource path="res://assets/fonts/Chewy/Chewy-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/components/theme_button/theme_button.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/components/theme_button_icon/theme_button_icon.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/placeholder.png" type="Texture" id=9]

[sub_resource type="StyleBoxFlat" id=43]
bg_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 200
corner_radius_top_right = 200
corner_radius_bottom_right = 200
corner_radius_bottom_left = 200
corner_detail = 20
shadow_color = Color( 1, 1, 1, 0.588235 )
shadow_size = 36

[sub_resource type="DynamicFont" id=44]
size = 90
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=1]
size = 36
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 6
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 60.0
expand_margin_right = 60.0

[sub_resource type="StyleBoxFlat" id=27]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=30]
size = 45
extra_spacing_top = -32
extra_spacing_bottom = -32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=28]
size = 20
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=29]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 6
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 40.0
expand_margin_right = 40.0
expand_margin_top = 12.0
expand_margin_bottom = 11.0

[node name="Home" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="Background" parent="." instance=ExtResource( 1 )]

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 420.0
margin_top = 10.0
margin_right = -420.0
margin_bottom = -10.0

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="MarginContainer"]
margin_right = 1080.0
margin_bottom = 1060.0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/AspectRatioContainer"]
margin_left = 10.0
margin_right = 1070.0
margin_bottom = 1060.0
custom_constants/margin_top = 50
custom_constants/margin_bottom = 56

[node name="GlobalVBoxContainer" type="VBoxContainer" parent="MarginContainer/AspectRatioContainer/MarginContainer"]
margin_top = 50.0
margin_right = 1060.0
margin_bottom = 1004.0

[node name="Logo" type="VBoxContainer" parent="MarginContainer/AspectRatioContainer/MarginContainer/GlobalVBoxContainer"]
margin_right = 1060.0
margin_bottom = 570.0
custom_constants/separation = 27

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/AspectRatioContainer/MarginContainer/GlobalVBoxContainer/Logo"]
visible = false
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 1080.0
margin_bottom = 300.0
rect_min_size = Vector2( 399, 300 )
size_flags_horizontal = 5

[node name="Image" type="TextureRect" parent="MarginContainer/AspectRatioContainer/MarginContainer/GlobalVBoxContainer/Logo/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1073.0
margin_bottom = 293.0
texture = ExtResource( 9 )
expand = true
stretch_mode = 6

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer/AspectRatioContainer/MarginContainer/GlobalVBoxContainer/Logo"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 1060.0
margin_bottom = 314.0
rect_min_size = Vector2( 399, 292 )
size_flags_horizontal = 5

[node name="Circle" type="PanelContainer" parent="MarginContainer/AspectRatioContainer/MarginContainer/GlobalVBoxContainer/Logo/PanelContainer2"]
margin_left = 384.0
margin_top = 11.0
margin_right = 676.0
margin_bottom = 303.0
rect_min_size = Vector2( 292, 292 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/panel = SubResource( 43 )

[node name="Image" type="TextureRect" parent="MarginContainer/AspectRatioContainer/MarginContainer/GlobalVBoxContainer/Logo/PanelContainer2"]
margin_left = 350.0
margin_top = 7.0
margin_right = 710.0
margin_bottom = 307.0
rect_min_size = Vector2( 360, 300 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="GameName" type="Label" parent="MarginContainer/AspectRatioContainer/MarginContainer/GlobalVBoxContainer/Logo"]
margin_top = 341.0
margin_right = 1060.0
margin_bottom = 458.0
rect_min_size = Vector2( 676, 0 )
size_flags_horizontal = 3
custom_fonts/font = SubResource( 44 )
text = "GAME NAME"
align = 1
valign = 1

[node name="Tittle" type="Label" parent="MarginContainer/AspectRatioContainer/MarginContainer/GlobalVBoxContainer/Logo"]
margin_left = 450.0
margin_top = 485.0
margin_right = 610.0
margin_bottom = 570.0
rect_min_size = Vector2( 160, 85 )
size_flags_horizontal = 6
size_flags_vertical = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "NOME"
align = 1
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="Options" type="VBoxContainer" parent="MarginContainer/AspectRatioContainer/MarginContainer/GlobalVBoxContainer"]
margin_top = 574.0
margin_right = 1060.0
margin_bottom = 954.0
size_flags_vertical = 3
custom_constants/separation = 30

[node name="StartGame" parent="MarginContainer/AspectRatioContainer/MarginContainer/GlobalVBoxContainer/Options" instance=ExtResource( 8 )]
visible = false
margin_left = 480.0
margin_right = 600.0
hint_tooltip = "Jogar"
size_flags_vertical = 6
selected_color = 1

[node name="Panel" type="Panel" parent="MarginContainer/AspectRatioContainer/MarginContainer/GlobalVBoxContainer/Options"]
margin_left = 273.0
margin_top = 87.0
margin_right = 786.0
margin_bottom = 262.0
rect_min_size = Vector2( 513, 175 )
size_flags_horizontal = 4
size_flags_vertical = 10
custom_styles/panel = SubResource( 27 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/AspectRatioContainer/MarginContainer/GlobalVBoxContainer/Options/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -10.0
margin_bottom = -17.0
custom_constants/margin_right = 60
custom_constants/margin_left = 60

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/AspectRatioContainer/MarginContainer/GlobalVBoxContainer/Options/Panel/MarginContainer"]
margin_left = 60.0
margin_right = 474.0
margin_bottom = 158.0
custom_constants/separation = 20

[node name="Easy" parent="MarginContainer/AspectRatioContainer/MarginContainer/GlobalVBoxContainer/Options/Panel/MarginContainer/HBoxContainer" instance=ExtResource( 7 )]
margin_top = 35.0
margin_right = 114.0
margin_bottom = 123.0
text = "Fácil"

[node name="Stars" type="HBoxContainer" parent="MarginContainer/AspectRatioContainer/MarginContainer/GlobalVBoxContainer/Options/Panel/MarginContainer/HBoxContainer/Easy"]
visible = false
anchor_top = 0.833333
anchor_right = 1.0
anchor_bottom = 1.83333
custom_constants/separation = 12
alignment = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="First" type="Label" parent="MarginContainer/AspectRatioContainer/MarginContainer/GlobalVBoxContainer/Options/Panel/MarginContainer/HBoxContainer/Easy/Stars"]
margin_left = 4.0
margin_top = 43.0
margin_right = 31.0
margin_bottom = 43.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 30 )
text = ""

[node name="Second" type="Label" parent="MarginContainer/AspectRatioContainer/MarginContainer/GlobalVBoxContainer/Options/Panel/MarginContainer/HBoxContainer/Easy/Stars"]
margin_left = 43.0
margin_top = 43.0
margin_right = 70.0
margin_bottom = 43.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 30 )
text = ""
__meta__ = {
"_editor_description_": ""
}

[node name="Third" type="Label" parent="MarginContainer/AspectRatioContainer/MarginContainer/GlobalVBoxContainer/Options/Panel/MarginContainer/HBoxContainer/Easy/Stars"]
margin_left = 82.0
margin_top = 43.0
margin_right = 109.0
margin_bottom = 43.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 30 )
text = ""
__meta__ = {
"_editor_description_": ""
}

[node name="Medium" parent="MarginContainer/AspectRatioContainer/MarginContainer/GlobalVBoxContainer/Options/Panel/MarginContainer/HBoxContainer" instance=ExtResource( 7 )]
margin_left = 134.0
margin_top = 35.0
margin_right = 266.0
margin_bottom = 123.0
text = "Médio"

[node name="Stars" type="HBoxContainer" parent="MarginContainer/AspectRatioContainer/MarginContainer/GlobalVBoxContainer/Options/Panel/MarginContainer/HBoxContainer/Medium"]
visible = false
anchor_top = 0.833333
anchor_right = 1.0
anchor_bottom = 1.83333
custom_constants/separation = 12
alignment = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="First" type="Label" parent="MarginContainer/AspectRatioContainer/MarginContainer/GlobalVBoxContainer/Options/Panel/MarginContainer/HBoxContainer/Medium/Stars"]
margin_left = 13.0
margin_top = 43.0
margin_right = 40.0
margin_bottom = 43.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 30 )
text = ""

[node name="Second" type="Label" parent="MarginContainer/AspectRatioContainer/MarginContainer/GlobalVBoxContainer/Options/Panel/MarginContainer/HBoxContainer/Medium/Stars"]
margin_left = 52.0
margin_top = 43.0
margin_right = 79.0
margin_bottom = 43.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 30 )
text = ""
__meta__ = {
"_editor_description_": ""
}

[node name="Third" type="Label" parent="MarginContainer/AspectRatioContainer/MarginContainer/GlobalVBoxContainer/Options/Panel/MarginContainer/HBoxContainer/Medium/Stars"]
margin_left = 91.0
margin_top = 43.0
margin_right = 118.0
margin_bottom = 43.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 30 )
text = ""
__meta__ = {
"_editor_description_": ""
}

[node name="Hard" parent="MarginContainer/AspectRatioContainer/MarginContainer/GlobalVBoxContainer/Options/Panel/MarginContainer/HBoxContainer" instance=ExtResource( 7 )]
margin_left = 286.0
margin_top = 35.0
margin_right = 414.0
margin_bottom = 123.0
text = "Difícil"

[node name="Stars" type="HBoxContainer" parent="MarginContainer/AspectRatioContainer/MarginContainer/GlobalVBoxContainer/Options/Panel/MarginContainer/HBoxContainer/Hard"]
visible = false
anchor_top = 0.833333
anchor_right = 1.0
anchor_bottom = 1.83333
custom_constants/separation = 12
alignment = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="First" type="Label" parent="MarginContainer/AspectRatioContainer/MarginContainer/GlobalVBoxContainer/Options/Panel/MarginContainer/HBoxContainer/Hard/Stars"]
margin_left = 11.0
margin_top = 43.0
margin_right = 38.0
margin_bottom = 43.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 30 )
text = ""

[node name="Second" type="Label" parent="MarginContainer/AspectRatioContainer/MarginContainer/GlobalVBoxContainer/Options/Panel/MarginContainer/HBoxContainer/Hard/Stars"]
margin_left = 50.0
margin_top = 43.0
margin_right = 77.0
margin_bottom = 43.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 30 )
text = ""
__meta__ = {
"_editor_description_": ""
}

[node name="Third" type="Label" parent="MarginContainer/AspectRatioContainer/MarginContainer/GlobalVBoxContainer/Options/Panel/MarginContainer/HBoxContainer/Hard/Stars"]
margin_left = 89.0
margin_top = 43.0
margin_right = 116.0
margin_bottom = 43.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 30 )
text = ""
__meta__ = {
"_editor_description_": ""
}

[node name="Tittle" type="Label" parent="MarginContainer/AspectRatioContainer/MarginContainer/GlobalVBoxContainer/Options/Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -82.5
margin_top = -21.0
margin_right = 82.5
margin_bottom = 12.0
rect_pivot_offset = Vector2( 121, 23 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 28 )
custom_styles/normal = SubResource( 29 )
text = "Selecione o nível"
align = 1
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="Credits" parent="MarginContainer/AspectRatioContainer/MarginContainer/GlobalVBoxContainer/Options" instance=ExtResource( 7 )]
margin_left = 444.0
margin_top = 292.0
margin_right = 615.0
margin_bottom = 380.0
text = "Créditos"

[connection signal="pressed" from="MarginContainer/AspectRatioContainer/MarginContainer/GlobalVBoxContainer/Options/StartGame" to="." method="_on_StartGame_pressed"]
[connection signal="pressed" from="MarginContainer/AspectRatioContainer/MarginContainer/GlobalVBoxContainer/Options/Panel/MarginContainer/HBoxContainer/Easy" to="." method="_on_Easy_pressed"]
[connection signal="pressed" from="MarginContainer/AspectRatioContainer/MarginContainer/GlobalVBoxContainer/Options/Panel/MarginContainer/HBoxContainer/Medium" to="." method="_on_Medium_pressed"]
[connection signal="pressed" from="MarginContainer/AspectRatioContainer/MarginContainer/GlobalVBoxContainer/Options/Panel/MarginContainer/HBoxContainer/Hard" to="." method="_on_Hard_pressed"]
[connection signal="pressed" from="MarginContainer/AspectRatioContainer/MarginContainer/GlobalVBoxContainer/Options/Credits" to="." method="_on_Credits_pressed"]
